moved repos to domain and got rid of useless database shit. Fixed up domain controller separation, and tidied up services.